		Finance: fixed no record display in Manage Expenses
		Finance: removed edit link in return message on successful add in Manage Expense Requests
		Finance: fixed PHP Notice issue when checking for budget access
		Finance: fixed sidebar PHP exception when approving/rejecting an expense request
		Finance: fixed background repeat issue in Show/Hide button in fee blocks
		Formal Assessment: added All Students filter persistence to pagination links
		Individual Needs: added template settings for pre-filling fields on new IEPs
		Individual Needs: fixed permission issue on summary page
		Library: reduced memory usage of Library browse page
		Library: fixed bug preventing item details from appearing in drop down in Browse Library
		Library: added All Fields filter persistence to pagination links in Browse Library
		Library: fixed PHP notice issue in Browse Library, when an older entry lacks new fields added to a type
		Library: reduced memory usage of Catalog Summary export
		Library: interface string fix in Import Records
		Library: fixed date format issue in Import Records
		Library: fixed issue preventing Name field from being set on import from Google Books
		Library: fixed issue preventing ID and Producer field validation from firing on submit of Add in Manage Catalog
		Library: fixed colspan issue in View Overdue Items
		Library: fixed interface string issue in View Overdue Items
		Markbook: added settings to enable/disable Effort and Rubrics
		Markbook: fixed bug preventing Learning Area rubric selection when course is associated with multiple year groups
		Markbook: removed Learning Area rubrics from multiple column add
		Markbook: fixed return and presetting of fields when landing on add page from Planner
		Markbook: made target scale selectable (so not constained to Default Assessment Scale)
		Markbook: fixed issue preventing some staff from seeing Markbook columns from other classes (depending on Edit rights)